Hotfix: Improve text contrast in dark mode (fix/contrast-text)

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body[data-theme="light"] header {
 /* Dark theme */
 body[data-theme="dark"] {
   background-color: #121212;
-  color: white;
+  color: rgb(241, 233, 233);
 }
 
 body[data-theme="dark"] header {
